@@ -4,7 +4,6 @@ INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${K
 ########### next target ###############
 
 SET(scriptbackends_STAT_SRCS
-   phpbackend.cpp
    scriptbackend.cpp
    simplebackend.cpp
    qtscriptbackend.cpp
@@ -18,7 +17,7 @@ ADD_LIBRARY(scriptbackends STATIC ${scriptbackends_STAT_SRCS})
 
 ########### install files ###############
 
-INSTALL(FILES common.php php.ini common.js rkcomponentscripting.js DESTINATION ${DATA_INSTALL_DIR}/rkward/phpfiles )
+INSTALL(FILES common.js rkcomponentscripting.js DESTINATION ${DATA_INSTALL_DIR}/rkward/phpfiles )
 
 
 
