@@ -1,11 +1,0 @@
-; This php.ini is meant for use with RKWard, only. It is unlikely to make too much sense in any other context
-; Some additional options are set in common.php
-
-; scripts should never terminate automatically
-max_execution_time = 0
-
-; show errors
-display_errors = 1
-
-; plugins may be installed anywhere
-open_basedir = NULL
